webcleaner (0.50) unstable; urgency=low

  * change imdb advert filter

 -- Bastian Kleineidam <calvin@debian.org>  Sun, 30 Jun 2002 18:11:20 +0200

webcleaner (0.49) unstable; urgency=low

  * wc/parser/htmllex.l: fix quoting of values with tags
  * put all rules in a new package wc.filter.rules
  * add new filter rules 'blockdomains' and 'blockurls'
  * bl2wc.py: script to generate WebCleaner rules from SquidGuard
    blacklists
  * added SquidGuard blacklist filters

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 29 Jun 2002 18:23:55 +0200

webcleaner (0.48) unstable; urgency=low

  * wc/proxy/dns_lookups.py:
    - reread DNS config every 10 minutes
    - fall back to TCP for truncated UDP packets
  * debian/templates: add monitor question

 -- Bastian Kleineidam <calvin@debian.org>  Sun, 23 Jun 2002 23:43:51 +0200

webcleaner (0.47) unstable; urgency=low

  * wc/parser: fix memory leaks
  * wc/proxy: reset self.attrs in recycled servers; this finally fixes
    the zlib.flush error
  * wc/proxy/HttpServer.py: fix error in reusing HTTP/1.0 connections
    without keep-alive

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 Jun 2002 23:40:37 +0200

webcleaner (0.46) unstable; urgency=low

  * webcleaner, wc/daemon: startwatch and stopwatch monitor

 -- Bastian Kleineidam <calvin@debian.org>  Fri, 21 Jun 2002 22:55:23 +0200

webcleaner (0.45) unstable; urgency=low

  * wc/proxy/ClientServerMatchMaker.py: parent proxy authorization
  * wc/parser/: use Python memory management in flex and bison files

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 12 Jun 2002 15:39:13 +0200

webcleaner (0.44) unstable; urgency=low

  * wc/filter/Compress.py: fix for compression of documents not calling
    filter() but only finish() function (zlib.error: -2)
  * add FAQ
  * get rid of 'python2' in rpm build
  * wc/__init__.py: add Compress module to the content-rewriting filters
  * wc/gui/HeaderWindow.py: proxy authorization for wcheaders
