@@ -12,7 +12,7 @@
  obfuscateip="0"
  debuglevel="2"
  showerrors="0"
- logfile="&lt;stdout&gt;"
+ logfile=""
  noproxyfor="localhost,127.0.0.1"
 >
 <filter name="Compress"/>
