@@ -32,7 +32,7 @@ mimelist = map(compileMime, ['text/html'])
 # regular expression which matches tag attributes that dont
 # need to be quoted
 # modern browsers can cope with a lot of non-quoted content
-_noquoteval = re.compile("^[-+~a-zA-Z0-9_/.#%:?,]+$")
+_noquoteval = re.compile("^[-+~a-zA-Z0-9_/.#%:?,$]+$")
 
 class Rewriter (Filter):
     """This filter can rewrite HTML tags. It uses a parser class."""
