@@ -1,8 +1,9 @@
 webcleaner (0.50) unstable; urgency=low
 
   * change imdb advert filter
+  * fix: /etc/webcleaner/config/* => /etc/webcleaner/*
 
- -- Bastian Kleineidam <calvin@debian.org>  Sun, 30 Jun 2002 18:11:20 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Jul 2002 00:10:32 +0200
 
 webcleaner (0.49) unstable; urgency=low
 
